--- a/src/client/app/login/login.component.html
+++ b/src/client/app/login/login.component.html
@@ -15,14 +15,14 @@
           </div>
           <div class="form-bottom">
             <br>
-            <form role="form" action="" method="post" class="login-form">
+            <form role="form" (ngSubmit)="login()"  method="post" class="login-form">
               <div class="form-group">
                 <label class="sr-only" for="form-username">Username</label>
-                <input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="form-username">
+                <input type="text" name="form-username" placeholder="Username..." class="form-username form-control" id="form-username" [(ngModel)]="userdata.username">
               </div>
               <div class="form-group">
                 <label class="sr-only" for="form-password">Password</label>
-                <input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password">
+                <input type="password" name="form-password" placeholder="Password..." class="form-password form-control" id="form-password" [(ngModel)]="userdata.password">
               </div>
               <br>
               <br>
