--- a/src/client/app/register/register.component.html
+++ b/src/client/app/register/register.component.html
@@ -33,10 +33,10 @@
             </div>
             <div class="row">
               <div class="float-left col-xs-6">
-                <button type="submit" class="btn">Go to login</button>
+                <button type="button" routerLink="/login" class="btn">Go to login</button>
               </div>
               <div class="float-right col-xs-6">
-                <button class="btn" routerLink="/register">Register</button>
+                <button type="submit" class="btn">Register</button>
               </div>
             </div>
           </form>
