--- a/src/client/app/register/register.component.html
+++ b/src/client/app/register/register.component.html
@@ -33,7 +33,7 @@
             </div>
             <div class="row">
               <div class="float-left col-xs-6">
-                <button type="submit" class="btn">Go to login</button>
+                <button type="submit" class="btn" routerLink="/login">Go to login</button>
               </div>
               <div class="float-right col-xs-6">
                 <button class="btn" routerLink="/register">Register</button>
