--- a/src/client/app/home/book-list/book-list.component.html
+++ b/src/client/app/home/book-list/book-list.component.html
@@ -1,2 +1,8 @@
-<h2>list of Books</h2>
-<app-book *ngFor="let book of booklist" [book]="book"></app-book>
+<div class="row">
+  <div class="col-xs-12 text-center">
+    <h2>Book List</h2>
+  </div>
+</div>
+<hr>
+<br>
+<app-book *ngFor="let book of booklist" [book]="book" (bookDeleted)="reloadData()"></app-book>
