--- a/src/client/app/home/book-list/book/book.component.html
+++ b/src/client/app/home/book-list/book/book.component.html
@@ -1,9 +1,26 @@
 <div class="row">
-  <div class="col-xs-3">
-    <a routerLink="book/{{book._id}}">
-      <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
+  <div class="col-xs-offset-1 col-xs-3 dimension">
+    <a routerLink="{{book._id}}">
+      <img src="data:image/JPEG;base64,{{book.image.value}}"/>
     </a>
   </div>
-  <div class="col-xs-3"><a routerLink="book/{{book._id}}">{{book.title}}</a></div>
-  <div class="col-xs-3"><a routerLink="book/{{book._id}}">{{book.authors}}</a></div>
+  <div class="col-xs-8">
+    <div class="row">
+      <div class="col-xs-3 border"><a routerLink="{{book._id}}">{{book.title}}</a></div>
+      <div class="col-xs-4 border"><a routerLink="{{book._id}}">{{book.authors}}</a></div>
+      <!--<div class="col-xs-2 border"><a routerLink="{{book._id}}">{{book.rating}}</a></div>-->
+    </div>
+    <br>
+    <div *ngIf="username=='admin'" class="row">
+      <div class="col-xs-3">
+        <button class="form-control btn-primary" routerLink="update/{{book._id}}">Update</button>
+      </div>
+      <div class="col-xs-3">
+        <button class="form-control btn-danger" (click)="delete()">Delete</button>
+      </div>
+    </div>
+
+  </div>
+
 </div>
+<hr>
