--- a/src/client/app/home/book-review-detail/book-review.component.html
+++ b/src/client/app/home/book-review-detail/book-review.component.html
@@ -2,17 +2,18 @@
   <div class="col-xs-5">
       <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
   </div>
-  <div class="col-xs-2"></div>
-  <div class="col-xs-5">
+  <div class="col-xs-1"></div>
+  <div class="col-xs-6">
     <h3>{{book.title}}</h3>
     <div class="row">
-      <div class="col-xs-offset-2 col-xs-10">
-        <h6>{{book.authors}}</h6>
+      <div class="col-xs-10">
+        <h6>By : {{book.authors}}</h6>
       </div>
     </div>
+    <hr>
     <div class="row">
-      <div class="col-xs-offset-2 col-xs-10">
-        <div class="col-xs-3">{{book.desc}}</div>
+      <div class="col-xs-10">
+        {{book.desc}}
       </div>
     </div>
   </div>
