--- a/src/client/app/home/home-header/home-header.component.html
+++ b/src/client/app/home/home-header/home-header.component.html
@@ -24,7 +24,7 @@
         </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown" appDropdown>
-            <a class="dropdown-toggle" role="button">User Name<span class="caret"></span></a>
+            <a class="dropdown-toggle" role="button">{{username}}<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a >My Favorites</a></li>
               <li><a (click)="logout()">Logout</a></li>
