--- a/src/client/app/home/add-book/add-book.component.css
+++ b/src/client/app/home/add-book/add-book.component.css
@@ -21,3 +21,12 @@
 #img-upload{
   width: 100%;
 }
+
+.dimension{
+  width: 100px;
+  height: 120px;
+}
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
