--- a/src/client/app/home/add-book/add-book.component.html
+++ b/src/client/app/home/add-book/add-book.component.html
@@ -5,26 +5,43 @@
         <br style="clear:both">
         <h3 style="margin-bottom: 25px; text-align: center;">{{pageTitle}}</h3>
         <div class="form-group">
-          <input type="text" class="form-control" id="title" name="title" formControlName="title" placeholder="Book Title" required>
+          <input type="text" class="form-control" id="title" name="title" formControlName="title" placeholder="Book Title" [(ngModel)]="title" required>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" id="authors" name="authors" formControlName="authors"  placeholder="Authors (comma separated if more than one)" required>
+          <input type="text" class="form-control" id="authors" name="authors" formControlName="authors"  placeholder="Authors (comma separated if more than one)" [(ngModel)]="authors" required>
         </div>
         <div class="form-group">
-          <input type="text" class="form-control" id="genre" name="genre" formControlName="genre" placeholder="Genre (comma separated if more than one)" required>
+          <input type="text" class="form-control" id="genre" name="genre" formControlName="genre" placeholder="Genre (comma separated if more than one)" [(ngModel)]="genre" required>
         </div>
         <div class="form-group">
-          <textarea class="form-control" id="desc" name="desc" formControlName="desc" placeholder="Book Description"></textarea>
+          <textarea class="form-control" rows="6" id="desc" name="desc" formControlName="desc" placeholder="Book Description" [(ngModel)]="desc"></textarea>
         </div>
         <div class="form-group">
           <label for="image"class="pull-left" >Book Thumbnail</label>
           <input type="file" id="image" class="form-control" (change)="onFileChange($event)" #fileInput>
           <br>
-          <button type="button" class="btn btn-danger pull-left" (click)="clearFile()">clear file</button>
-        </div>
-        <br>
-        <div class="form-group col-md-12 text-center">
-          <button type="submit" [disabled]="loading" class="btn btn-success">Submit <i class="fa fa-spinner fa-spin fa-fw" *ngIf="loading"></i></button>
+          <div class="row">
+            <div class="col-xs-3">
+              <div class="dimension">
+                Preview
+                <br>
+                <img *ngIf="loading" src="data:image/JPEG;base64,{{image.value}}"/>
+              </div>
+            </div>
+            <div class="col-xs-6">
+              <div class="row">
+                <div class="col-xs-12"><br><br></div>
+              </div>
+              <div class="row">
+                <button type="button" class="btn btn-danger pull-left" (click)="clearFile()">clear file</button>
+                <button type="submit" class="btn btn-success">Submit <i class="fa fa-spinner fa-spin fa-fw" *ngIf="loading"></i></button>
+              </div>
+              <div class="row">
+                <div class="col-xs-12">&nbsp;</div>
+              </div>
+
+            </div>
+          </div>
         </div>
         <div class="form-group" id="error" style="color: red">
         </div>
