--- a/src/client/app/home/book-review-detail/book-review.component.html
+++ b/src/client/app/home/book-review-detail/book-review.component.html
@@ -1,8 +1,10 @@
 <div class="row">
-  <div class="col-xs-5">
-      <img src="http://placehold.it/200x200" class="thumbnail img-responsive">
+  <br>
+</div>
+<div class="row" *ngIf="book!=undefined">
+  <div class="col-xs-offset-1 col-xs-4 dimension">
+      <img src="data:image/JPEG;base64,{{book.image.value}}"/>
   </div>
-  <div class="col-xs-1"></div>
   <div class="col-xs-6">
     <h3>{{book.title}}</h3>
     <div class="row">
@@ -16,5 +18,22 @@
         {{book.desc}}
       </div>
     </div>
+    <div class="row">
+      <div class="col-xs-10">
+        <textarea id="review" class="form-control" rows="5" [(ngModel)]="reviewInst.review" placeholder="Add Review">{{reviewInst.review}}</textarea>
+      </div>
+    </div>
+    <br>
+    <div class="row" *ngIf="allowAdd">
+      <div class="col-xs-offset-3 col-xs-4 text-center">
+        <button class="btn-primary form-control"  (click)="addReview()">Add Review</button>
+      </div>
+    </div>
+    <br>
+  </div>
+</div>
+<div class="row" *ngIf="book!=undefined">
+  <div class="col-xs-offset-1 col-xs-12">
+    <app-review [bookId]="book._id"></app-review>
   </div>
 </div>
