--- a/src/client/app/home/home-header/home-header.component.html
+++ b/src/client/app/home/home-header/home-header.component.html
@@ -8,7 +8,7 @@
 
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a>Home</a></li>
+          <li><a routerLink="/home">Home</a></li>
           <li><a>Search</a></li>
           <li *ngIf="checkUserName()"><a routerLink="/home/addBook">Add Book</a></li>
         </ul>
