Adding login error message and password acceptance on strength meter

--- a/src/client/app/register/register.component.html
+++ b/src/client/app/register/register.component.html
@@ -43,7 +43,7 @@
               </div>
             </div>
             <div class="form-group">
-              <p id="error" name="error" [(ngModel)] = "error"></p>
+              <p id="error" name="error"></p>
             </div>
           </form>
         </div>
