--- a/src/client/app/login/login.component.html
+++ b/src/client/app/login/login.component.html
@@ -34,6 +34,9 @@
                   <button class="btn" routerLink="/register">Register</button>
                 </div>
               </div>
+              <div class="form-group">
+                <p id="error" name="error"></p>
+              </div>
             </form>
           </div>
         </div>
