add review corrected

--- a/src/client/app/home/book-review-detail/all-review/all-review.component.html
+++ b/src/client/app/home/book-review-detail/all-review/all-review.component.html
@@ -3,4 +3,4 @@
   <h4>User Reviews</h4>
 </div>
 <hr>
-<app-single-review *ngFor="let review of allReview" [review]="review"></app-single-review>
+<app-single-review *ngFor="let review of allReview" [review]="review" (reviewAdded)="reloadData()"></app-single-review>
