with image upload and update delete of books

--- a/src/client/app/home/book-review-detail/book-review.component.html
+++ b/src/client/app/home/book-review-detail/book-review.component.html
@@ -19,6 +19,17 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-xs-2">
+        <label for="review">Your Rating</label>
+        <input class="form-control" type="number" min="0" max="5" [(ngModel)]="reviewInst.rating">
+      </div>
+      <div class="col-xs-2">
+        <label for="review">Favorite</label>
+        <input class="form-control" type="checkbox" [(ngModel)]="favorite">
+      </div>
+    </div>
+    <br>
+    <div class="row">
       <div class="col-xs-10">
         <textarea id="review" class="form-control" rows="5" [(ngModel)]="reviewInst.review" placeholder="Add Review">{{reviewInst.review}}</textarea>
       </div>
