--- a/src/client/app/home/book-list/book-list.component.html
+++ b/src/client/app/home/book-list/book-list.component.html
@@ -4,5 +4,19 @@
   </div>
 </div>
 <hr>
+<div class="row">
+  <div class="col-xs-offset-1 col-sm-6 col-md-6">
+      <div class="input-group">
+        <input type="text" class="form-control" placeholder="Search" [(ngModel)]="search">
+        <div class="input-group-btn">
+          <button class="btn btn-default" type="button" (click)="onSearch()"><i class="glyphicon glyphicon-search"></i></button>
+        </div>
+      </div>
+  </div>
+</div>
+<hr>
 <br>
-<app-book *ngFor="let book of booklist" [book]="book" (bookDeleted)="reloadData()"></app-book>
+<div class="row">
+  <app-book *ngFor="let book of booklist" [book]="book" (bookDeleted)="reloadData()"></app-book>
+</div>
+
