--- a/src/client/app/home/home-header/home-header.component.html
+++ b/src/client/app/home/home-header/home-header.component.html
@@ -8,25 +8,13 @@
 
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
-          <li><a routerLink="/home">Home</a></li>
-          <li><a>Search</a></li>
           <li *ngIf="checkUserName()"><a routerLink="/home/addBook">Add Book</a></li>
         </ul>
-        <div class="col-sm-3 col-md-3">
-          <form class="navbar-form" role="search">
-            <div class="input-group">
-              <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
-              <div class="input-group-btn">
-                <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
-              </div>
-            </div>
-          </form>
-        </div>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown" appDropdown>
             <a class="dropdown-toggle" role="button">{{username}}<span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a >My Favorites</a></li>
+              <li><a routerLink="fav">My Favorites</a></li>
               <li><a (click)="logout()">Logout</a></li>
             </ul>
           </li>
