--- a/src/client/app/home/book-review-detail/book-review.component.html
+++ b/src/client/app/home/book-review-detail/book-review.component.html
@@ -19,13 +19,13 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-2">
+      <div class="col-xs-4">
         <label for="review">Your Rating</label>
         <input class="form-control" type="number" min="0" max="5" [(ngModel)]="reviewInst.rating">
       </div>
       <div class="col-xs-2">
         <label for="review">Favorite</label>
-        <input class="form-control" type="checkbox" [(ngModel)]="favorite">
+        <input type="checkbox" [(ngModel)]="favorite">
       </div>
     </div>
     <br>
