--- a/src/client/app/home/book-list/book-list.component.html
+++ b/src/client/app/home/book-list/book-list.component.html
@@ -11,12 +11,26 @@
         <div class="input-group-btn">
           <button class="btn btn-default" type="button" (click)="onSearch()"><i class="glyphicon glyphicon-search"></i></button>
         </div>
+        <div>&nbsp;</div>
+        <div class="input-group-btn">
+          <button class="btn btn-danger" type="button" (click)="reloadData()">Clear Search</button>
+        </div>
       </div>
   </div>
 </div>
 <hr>
 <br>
 <div class="row">
+<app-book *ngFor="let book of newArray" [book]="book" (bookDeleted)="reloadData()"></app-book>
+<div class="Button" align="center">
+  <button [disabled] = "prevDis" id="prev" name ="prev" (click) = "decreaseCurrentPage()">
+    Previous
+  </button>
+  {{currentPage + 1}} / {{numberOfPages}}
+  <button [disabled] = "nextDis" id="next" name="next" (click) = "increaseCurrentPage()">
+    Next
+  </button>
+</div>
   <app-book *ngFor="let book of booklist" [book]="book" (bookDeleted)="reloadData()"></app-book>
 </div>
 
