--- a/src/client/app/home/book-list/book/book.component.html
+++ b/src/client/app/home/book-list/book/book.component.html
@@ -8,6 +8,7 @@
     <div class="row">
       <div class="col-xs-3 border"><a routerLink="{{book._id}}">{{book.title}}</a></div>
       <div class="col-xs-4 border"><a routerLink="{{book._id}}">{{book.authors}}</a></div>
+      <div class="col-xs-4 border">{{book.genre}}</div>
       <!--<div class="col-xs-2 border"><a routerLink="{{book._id}}">{{book.rating}}</a></div>-->
     </div>
     <br>
