--- a/src/client/app/home/favorites/favorite.component.html
+++ b/src/client/app/home/favorites/favorite.component.html
@@ -1,1 +1,29 @@
-<p>fav</p>
+<br>
+<div class="row">
+  <div class="row text-center">
+    <h3>Your Favorite Books</h3>
+  </div>
+  <hr>
+  <div *ngFor="let book of bookList" class="row">
+    <br>
+    <div>
+      <div class="col-xs-offset-1 col-xs-3 dimension">
+        <a routerLink="/home/{{book._id}}">
+          <img src="data:image/JPEG;base64,{{book.image.value}}"/>
+        </a>
+      </div>
+      <div class="col-xs-8">
+        <div class="row">
+          <div class="col-xs-4 border"><a routerLink="/home/{{book._id}}">{{book.title}}</a></div>
+          <div class="col-xs-4 border"><a routerLink="/home/{{book._id}}">{{book.authors}}</a></div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-xs-3">
+            <button class="form-control btn-danger" (click)="removeFav(book._id)">Remove Favorite</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
