--- a/src/client/app/home/home-header/home-header.component.html
+++ b/src/client/app/home/home-header/home-header.component.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-default">
     <div class="container-fluid">
       <div class="navbar-header">
-        <a routerLink="/home" class="navbar-brand">Book Review</a>
+        <a routerLink="/home" class="navbar-brand">Nerd Station</a>
       </div>
 
       <div class="collapse navbar-collapse">
@@ -12,7 +12,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown" appDropdown>
-            <a class="dropdown-toggle" role="button">{{username}}<span class="caret"></span></a>
+            <a class="dropdown-toggle" role="button">Hello! {{username}}<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a routerLink="fav">My Favorites</a></li>
               <li><a (click)="logout()">Logout</a></li>
@@ -23,9 +23,9 @@
     </div>
   </nav>
   <div class="row">
-    <div class="col-xs-12">
-      <div class="col xs-6 col-sm-offset-3">
-        <h1>Book Review Website</h1>
+    <div class="col-xs-12 text-center">
+      <div class="col-xs-4 col-xs-offset-4">
+        <h1>Nerd Station</h1>
       </div>
 
     </div>
