--- a/src/client/app/home/home.component.html
+++ b/src/client/app/home/home.component.html
@@ -1,2 +1,21 @@
-<app-home-header></app-home-header>
-<router-outlet></router-outlet>
+<header>
+  <app-home-header></app-home-header>
+
+</header>
+
+<div class="container-fluid body-content">
+  <div class="row">
+    <div class="col-xs-12 bg-overlay text-center" >
+        <h1><br><br>Nerd Station</h1>
+    </div>
+  </div>
+
+  <div class="row">
+    <router-outlet></router-outlet>
+  </div>
+</div>
+<br>
+<footer class="text-center">
+  Developed by Vinaya, Madhura and Sanjana
+</footer>
+
