--- a/src/client/app/home/home-header/home-header.component.css
+++ b/src/client/app/home/home-header/home-header.component.css
@@ -1,20 +1,20 @@
 #outer {
-  height: 320px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  background-color: #292b2c;
+  color: #fff;
+  height: 50px;
+  font-weight: 400;
+  line-height: 1.5;
 }
 h1{
   color:#cccc;
   font-size: 400%;
   margin-top: 50px;
 }
-.bg-overlay {
-  background: linear-gradient(rgba(0,0,0,.7), rgba(0,0,0,.7)), url("../img/bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  color: #fff;
-  height: 450px;
-  width:100%;
-}
+
 
 a {
   cursor: pointer;
@@ -23,4 +23,8 @@ a {
 .navcolor{
   background-color: #343a40!important;
   color: #fff!important;
+}
+.starter-template {
+  padding: 3rem 1.5rem;
+  text-align: center;
 }
