--- a/src/client/app/home/home-header/home-header.component.html
+++ b/src/client/app/home/home-header/home-header.component.html
@@ -1,10 +1,7 @@
+<div id="outer" >
+  <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse fixed-top">
 
-<div id="outer" class="bg-overlay">
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a routerLink="/home" class="navbar-brand">Nerd Station</a>
-      </div>
+      <a routerLink="/home" class="navbar-brand">Nerd Station</a>
 
       <div class="collapse navbar-collapse">
         <ul class="nav navbar-nav">
@@ -12,7 +9,7 @@
         </ul>
         <ul class="nav navbar-nav navbar-right">
           <li class="dropdown" appDropdown>
-            <a class="dropdown-toggle" role="button">Hello! {{username}}<span class="caret"></span></a>
+            <a class="dropdown-toggle" role="button">Hello!&nbsp;&nbsp;&nbsp;{{username}}<span class="caret"></span></a>
             <ul class="dropdown-menu">
               <li><a routerLink="fav">My Favorites</a></li>
               <li><a (click)="logout()">Logout</a></li>
@@ -20,16 +17,5 @@
           </li>
         </ul>
       </div>
-    </div>
   </nav>
-  <div class="row">
-    <div class="col-xs-12 text-center">
-      <div class="col-xs-4 col-xs-offset-4">
-        <h1>Nerd Station</h1>
-      </div>
-
-    </div>
-
-  </div>
-
 </div>
